[gd_scene load_steps=4 format=3 uid="uid://06vt7uujs2nu"]

[ext_resource type="Script" uid="uid://cx1vfvkucnh0f" path="res://main/end_game_screen.gd" id="1_luc5o"]

[sub_resource type="LabelSettings" id="LabelSettings_luc5o"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_lttkf"]
font_size = 32
font_color = Color(0.83, 0.83, 0.83, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="EndGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_luc5o")
winner_label_settings = SubResource("LabelSettings_luc5o")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 12.0
offset_right = 44.5
offset_bottom = 35.0
grow_horizontal = 2
text = "The Winner"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "press any button to continue"
label_settings = SubResource("LabelSettings_lttkf")

[node name="DeadTimeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="DeadTimeTimer" to="." method="_on_timer_timeout"]
